force-app/main/default/objects/Marketing_Source_Map__c/Marketing_Source_Map__c.object-meta.xml
<CustomObject>
    <description>This object is created to define Marketing Source Map for Gusto.</description>
    <label>Marketing Source Map</label>
    <nameField>
        <displayFormat>SM-{0000}</displayFormat>
        <label>Source Map ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SourceMaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>