force-app/main/default/objects/Marketing_Source_Map__c/fields/Marketing_Program__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Program__c</fullName>
    <label>Marketing Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>