force-app/main/default/objects/Marketing_Source_Map__c/fields/Ref_Key__c.field-meta.xml
<CustomField>
    <fullName>Ref_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ref Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>